Correct svg overflow not hidden in IE9
git-svn-id: http://root.cern.ch/svn/root/trunk@46706 27541ba8-7e3a-0410-8455-c3a389f83636

--- a/js/JSRootIO/style/JSRootInterface.css
+++ b/js/JSRootIO/style/JSRootInterface.css
@@ -106,6 +106,11 @@ input.tb {
    background-color: #ffffff;
 }
 
+/*
+ * Correct overflow not hidden in IE9
+ */
+svg:not(:root) { overflow: hidden; }
+
 /*--------------------------------------------------|
 | dTree 2.05 | www.destroydrop.com/javascript/tree/ |
 |---------------------------------------------------|
